--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,9 +14,11 @@
             <select disabled>
                 <option value="sv">Swedish</option>
             </select></br>
-            Day starts on:<br/>
-            <input type="radio" name="start_of_week" value="sunday">Sunday<br/>
-            <input type="radio" name="start_of_week" value="monday">Monday
+            Day starts on:
+            <input disabled type="radio" name="start_of_week" value="sunday">Sunday
+            <input disabled type="radio" name="start_of_week" value="monday" checked="checked">Monday<br/>
+            Select images:
+            <input type="file" name="files" multiple>
         </form>
     </div>
 </body>
