--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,22 +5,30 @@
 <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='css/dropzone.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-<script src="{{ url_for('static', filename='js/dropzone.js') }}"></script>
 <title>Calendar maker</title>
 </head>
 <body>
 <div id="content">
-    <h1>Calendar maker</h1>
-    <form action="">
-        Language:
-        <select disabled>
-            <option value="sv">Swedish</option>
-        </select></br>
-        Day starts on:
-        <input disabled type="radio" name="start_of_week" value="sunday">Sunday
-        <input disabled type="radio" name="start_of_week" value="monday" checked="checked">Monday<br/>
-        Drop images:
+    <center>
+        <h1>Calendar maker</h1>
+    </center>
+    <form id="upload-file" method="post" enctype="multipart/form-data">
+        <fieldset>
+            <label>Language:</label>
+            <select disabled><option value="sv">Swedish</option></select>
+        </fieldset>
+        <fieldset>
+            <label>Day starts on:</label>
+            <input disabled type="radio" name="start_of_week" value="sunday">Sunday
+            <input disabled type="radio" name="start_of_week" value="monday" checked="checked">Monday<br/>
+        </fieldset>
+        <fieldset>
+            <label for="file">Select images</label>
+            <input name="file" type="file">
+        </fieldset><br/>
+        <fieldset class="right">
+            <button id="upload-file-btn" type="button">Preview</button>
+        </fieldset>
     </form>
-    <form action="/file-upload" class="dropzone" id="my-awesome-dropzone"></form>
 </div>
 </body>
