New table layout

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,10 +32,66 @@
             </div>
         </fieldset>
         <fieldset>
-            <div class="form-group">
-                <label for="file">Select images</label>
-                <input name="file" type="file" multiple>
-            </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Month</th>
+                        <th>Image</th>
+                        <th>File</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Janaury</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>February</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>March</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>April</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>May</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>June</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>July</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>August</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>September</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>October</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>November</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                    <tr>
+                        <td>December</td>
+                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
+                    </tr>
+                </tbody>
+            </table>
         </fieldset>
         <fieldset>
             <button class="btn btn-success right" type="submit">Preview</button>
