Use python instead of static table

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -42,54 +42,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Janaury</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>February</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>March</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>April</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>May</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>June</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>July</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>August</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>September</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>October</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>November</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
-                    <tr>
-                        <td>December</td>
-                        <td class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg" class="thumb"></td>
-                    </tr>
+                    <!--Do this as for-loop-->
                 </tbody>
             </table>
         </fieldset>
