Aligning desc and date

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -59,12 +59,12 @@
                         <td>{{m}}</td>
                         <td><img class="thumb" src="awdwaw"></td>
                         <td>
-                            <label class="col-sm-2">Description</label>
-                            <div class="col-sm-4">
+                            <label class="col-sm-5">Description</label>
+                            <div class="col-sm-7">
                                 <input class="small-input form-control" type="text">
-                            </div><br/><br/>
-                            <label class="col-sm-2">Date</label>
-                            <div class="col-sm-4">
+                            </div><br/>
+                            <label class="col-sm-5">Date</label>
+                            <div class="col-sm-7">
                                 <input class="small-input form-control" type="text">
                             </div>
                         </td>
