--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,13 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 <title>Calendar maker</title>
 </head>
 <body>
 <div id="content">
-    <center>
-        <h1>Calendar maker</h1>
-    </center>
+    <center><h1>Calendar maker</h1></center>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <fieldset>
             <div class="form-group">
@@ -55,26 +55,28 @@
                 </thead>
                 <tbody>
                 {% for m in ('January','February','March','April','May','June','July','August','September','October','November','December'): %}
+                    {% set sm=m.lower()[0:3] %}
                     <tr>
                         <td>{{m}}</td>
-                        <td><img class="thumb" src="{{ url_for('static', filename='placeholder.png') }}"></td>
+                        <td><img id="img-{{sm}}" name="img-{{sm}}" class="thumb" src="{{ url_for('static', filename='placeholder.png') }}"></td>
                         <td>
                             <div>
                                 <label class="col-sm-5">Description</label>
                                 <div class="col-sm-7">
-                                    <input placeholder="Sunset, New York City, NY"  class="small-input form-control" type="text">
+                                    <input name="desc-{{sm}}" placeholder="Sunset, New York City, NY"  class="small-input form-control" type="text">
                                 </div><br/>
                             </div>
                             <div class="table-input-bottom">
                                 <label class="col-sm-5">Date</label>
                                 <div class="col-sm-7">
-                                    <input placeholder="June 8, 2009" class="small-input form-control" type="text">
+                                    <input name="date-{{sm}}" placeholder="June 8, 2009" class="small-input form-control" type="text">
                                 </div>
                             </div>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-default">
+                            <label id="browse-{{sm}}" type="button" class="btn btn-default">
                                 <span class="glyphicon glyphicon-folder-open"></span>
+                                <input id="browse-{{sm}}" name="browse-{{m}}" class="hidden-file" style="display:none;" type="file"/>
                             </button>
                         </td>
                     </tr>
@@ -83,8 +85,8 @@
             </table>
         </fieldset>
         <fieldset>
-            <button class="btn btn-success right" type="submit">Preview</button>
+            <button id="prev" class="btn btn-success right" type="submit">Preview</button>
         </fieldset>
     </form>
 </div>
-s</body>
+</body>
