Making calendar works

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,7 +39,7 @@
             <div class="form-group">
                 <label class="col-sm-3" for="year">Year:</label>
                 <div class="col-sm-9">
-                    <input class="form-control" placeholder="Year" type="text">
+                    <input name="year" class="form-control" placeholder="Year" type="text">
                 </div>
             </div>
         </fieldset>
@@ -80,7 +80,7 @@
                     <td>
                         <label id="browse-{{sm}}" type="button" class="btn btn-default">
                             <span class="glyphicon glyphicon-folder-open"></span>
-                            <input id="browse-{{sm}}" name="browse-{{m}}" class="hidden-file" style="display:none;" type="file"/>
+                            <input id="browse-{{sm}}" name="browse-{{sm}}" class="hidden-file" style="display:none;" type="file"/>
                         </button>
                     </td>
                 </tr>
