Started working on progress page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -89,7 +89,7 @@
             </table>
         </fieldset>
         <fieldset>
-            <button id="prev" class="btn btn-success right" type="submit">Preview</button>
+            <button id="prev" class="btn btn-primary btn-lg right" type="submit">Preview</button>
         </fieldset>
     </form>
 </div>
