Done, this works

--- a/src/templates/calendar.html
+++ b/src/templates/calendar.html
@@ -16,8 +16,10 @@
             <span class="sr-only">40% Complete (success)</span>
         </div>
     </div>
-    <button type="button" class="right btn btn-success btn-lg" aria-label="Left Align">
-        <span class="glyphicon glyphicon-download" aria-hidden="true"></span> Download
-    </button>
+    <form action="/static/calendar.pdf">
+        <button id="btn-download" type="submit" class="right btn btn-success btn-lg" aria-label="Left Align">
+            <span class="glyphicon glyphicon-download" aria-hidden="true"></span> Download
+        </button>
+    </form>
 </div>
 </body>
